# te-tetris

./: .gitignore  CMakeLists.txt  CMakeLists2.txt  CmakeListSTATICO.txt  README.md  arklight.cpp  arklight.h  te-teris.cpp  te-tetris.cpp  te-tetris_backup2.cpp  tempCodeRunnerFile  tempCodeRunnerFile.cpp  tetris.cpp  tetrisssss.cpp
coso/: tree.json
lib/httplib/: httplib.h
lib/ixwebsocket/: ixwebsocket.h
sounds/sfx/: converti.sh
versions/0.1/: te-tetris_backup2.cpp
versions/0.2/: tetris.cpp
versions/0.3/: tetrisssss.cpp
versions/0.4/: te-tetris.cpp
versions/0.5/: main.cpp
versions/0.5/include/: campo.hpp  costanti.hpp  grafica.hpp  input.hpp  punteggio.hpp  tetramino.hpp  utilita.hpp
versions/0.5/src/: campo.cpp  input.cpp  punteggio.cpp  tetramino.cpp  utilita.cpp
versions/0.6/: main.cpp
versions/0.6/include/: campo.hpp  gioco.hpp  grafica.hpp  online.hpp  utilita.hpp
versions/0.6/src/: gioco.cpp  grafica.cpp  input.cpp  online.cpp  utilita.cpp
versions/0.7/: main.cpp
versions/0.7/include/: costanti.hpp  gioco.hpp  input.hpp  online.hpp  utilita.hpp
versions/0.7/src/: gioco.cpp  online.cpp  utilita.cpp
versions/0.8/: main.cpp
versions/0.8/include/: campo.hpp  costanti.hpp  grafica.hpp  online.hpp  utilita_linux.hpp
versions/0.8/src/: audio.cpp  campo.cpp  gioco.cpp  input.cpp  tetramino.cpp  utilita_linux.cpp
versions/current/: main.cpp  te-tetris.cpp
versions/current/include/: audio.hpp  campo.hpp  costanti.hpp  gioco.hpp  grafica.hpp  input.hpp  online.hpp  punteggio.hpp  tetramino.hpp  utilita.hpp  utilita_linux.hpp
versions/current/src/: audio.cpp  campo.cpp  costanti.cpp  gioco.cpp  grafica.cpp  input.cpp  online.cpp  punteggio.cpp  tetramino.cpp  utilita.cpp  utilita_linux.cpp
